# esoterica

./: .gitignore  AGENTS.md  Cargo.toml  README.md  archetypes.py  cli.py  lexicon.py  morphology.py  phonology.py  repos.txt
data/: morphologies.toml  phonologies.toml  sound_changes.toml  syntaxes.toml
output/: turkic_lang.json
src/: archetypes.rs  args.rs  atproto.rs  collaborative.rs  lexicon.rs  lexicon_structs.rs  lib.rs  main.rs  morphology.rs  orthography.rs  phonology.rs  semantic_drift.rs  sound_change.rs  syntax.rs  tests.rs  tui.rs  wasm.rs
src/tui/: app.rs  components.rs  event.rs  mod.rs  phonology_designer.rs  ui.rs
tests/: test_phonology.py
web/: index.html  package.json  svelte.config.js  vite.config.js
web/src/: App.svelte  main.js
web/src/lib/: LexiconBrowser.svelte  PhonologyDesigner.svelte  SoundChangeEditor.svelte
