[package]
name = "esoterica"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8"
anyhow = "1.0.86"
rand = "0.8.5"
ratatui = "0.26.3"
crossterm = "0.27.0"
tracing = "0.1.44"
atrium-api = "0.25.8"
bsky-sdk = "0.1.24"
tokio = { version = "1.37.0", features = ["full"] }
color-eyre = "0.6.3"
futures = "0.3.31"
