[package]
name = "esoterica"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "esoterica"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:ratatui", "dep:crossterm", "dep:tokio", "dep:color-eyre", "dep:bsky-sdk", "dep:atrium-api", "dep:futures", "dep:tracing"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:console_error_panic_hook", "dep:getrandom"]

[dependencies]
# Core (always available)
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8"
nom = "7.1"
anyhow = "1.0.86"
rand = "0.8.5"

# CLI (optional via feature)
clap = { version = "4.5.4", features = ["derive"], optional = true }
ratatui = { version = "0.26.3", optional = true }
crossterm = { version = "0.27.0", optional = true }
tracing = { version = "0.1.44", optional = true }
atrium-api = { version = "0.25.8", optional = true }
bsky-sdk = { version = "0.1.24", optional = true }
tokio = { version = "1.37.0", features = ["full"], optional = true }
color-eyre = { version = "0.6.3", optional = true }
futures = { version = "0.3.31", optional = true }

# WASM
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
